--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     </header>
     <div class="main-container">
         <div class="card-container">
-            <h1></h1>
+            <h1 id="question">This is a question</h1>
             <ul>
-                <li class="option-box" id="box-1"><h3>option</h3></li>
-                <li class="option-box" id="box-2"><h3>option</h3></li>
-                <li class="option-box" id="box-3"><h3>option</h3></li>
-                <li class="option-box" id="box-4"><h3>option</h3></li>
+                <li class="option-box" ><h3 id="box-1">option</h3></li>
+                <li class="option-box" ><h3 id="box-2">option</h3></li>
+                <li class="option-box" ><h3 id="box-3">option</h3></li>
+                <li class="option-box" ><h3 id="box-4">option</h3></li>
             </ul>
         </div>
         <div class="countdown">
