--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <div class="main-container">
         <div class="card-container">
-            <h1 id="question">This is a question</h1>
+            <h1 id="question">This is a question?</h1>
             <ul>
                 <li class="option-box" ><h3 id="box-1">option</h3></li>
                 <li class="option-box" ><h3 id="box-2">option</h3></li>
