added timer and a function to log the text of user button pushes

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     </header>
     <div class="main-container">
         <div class="card-container">
-            <h2 id="question">This is a question?</h2>
+            <h2 id="question"></h2>
             <ul id="button-box">
-                <button class="option-box" id="box-1"><li><h3 id="box-1-text"></h3></li></button>
-                <button class="option-box" id="box-2"><li><h3 id="box-2-text"></h3></li></button>
-                <button class="option-box" id="box-3"><li><h3 id="box-3-text"></h3></li></button>
-                <button class="option-box" id="box-4"><li><h3 id="box-4-text"></h3></li></button>
+                <button class="button" id="box-1"><li><h3 id="box-1-text"></h3></li></button>
+                <button class="button" id="box-2"><li><h3 id="box-2-text"></h3></li></button>
+                <button class="button" id="box-3"><li><h3 id="box-3-text"></h3></li></button>
+                <button class="button" id="box-4"><li><h3 id="box-4-text"></h3></li></button>
             </ul>
         </div>
         <div class="countdown">
