added a gameOver function which hides the game blocks and displays a block to show and save high scores

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <button id="start-button">Start</button>
     </header>
     <div class="main-container">
-        <div class="card-container">
+        <div class="card-container" id="container-one">
             <h2 id="question"></h2>
             <ul id="button-box">
                 <button class="button" id="box-1"><li><h3 id="box-1-text"></h3></li></button>
@@ -21,7 +21,7 @@
                 <button class="button" id="box-4"><li><h3 id="box-4-text"></h3></li></button>
             </ul>
         </div>
-        <div class="countdown">
+        <div class="countdown" id="container-two">
             <div class="countdown-card">
                 <h2>Countdown</h3>
                     
@@ -30,6 +30,10 @@
             <div class="countdown-card">
                 <h3 id="timer">90 seconds</h3>
             </div>
+        </div>
+
+        <div class="card-container" id="container-three">
+
         </div>
 
     </div>
