removed out of place character

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="card-container" id="container-five">
             <ul>
                 <li><input type="text" id="initials-input" placeholder="Enter initials"></li>
-                <button id="initials-button"><li><h3>Save High Score</h3></li>></button>
+                <button id="initials-button"><li><h3>Save High Score</h3></li></button>
                 
             </ul>
         </div>
