minor gramatical fixes

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <li id="score"><h3></h3></li>
                 <li id="number-correct"><h3></h3></li>
                 <button id="save-score"><li><h3>Save Score</h3></li></button>
-                <button id="restart-button"><li><h3>Restart</h3></li>></button>
+                <button id="restart-button"><li><h3>Restart</h3></li></button>
             </ul>
 
         </div>
